# lexer-exercise

./: Cargo.toml  LICENSE  README.md
lexer/: Cargo.toml
lexer/benches/: bench.rs
lexer/src/: lib.rs
lexer/src/benches/: bench.rs
parser/: Cargo.toml
