[package]
name = "parser"
version = "0.1.0"
authors = ["Dean Karn <dean.karn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
harness = false
name = "bench"

[dependencies]


[dev-dependencies]
criterion = "0.2"

[lib]
bench = false